fix: increase padding in home styles for better spacing

--- a/src/app/(home)/home.module.scss
+++ b/src/app/(home)/home.module.scss
@@ -319,7 +319,7 @@
   box-shadow: inset -2px -2px 5px var(--bg-primary),
     inset 3px 3px 5px rgba(0, 0, 0, 0.1);
   border-radius: 5px;
-  padding: 5px;
+  padding: 8px;
   outline: none;
   border: none;
   max-width: 100%;
